--- a/style.css
+++ b/style.css
@@ -1,96 +1,332 @@
-*{
-margin: 0;
-padding: 0;
-font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+*
+{
+    font-family: 'Poor Story', cursive;
+    margin: 0;
+    box-sizing: border-box;
+    font-size: 30;
+    padding: 0;
 }
-.hero{
-    width: 100%;
-    height: 100%;
-    background-image: url(images/Cover.png);
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    overflow: hidden;
+:root
+{
+    --clr: #222327;
 }
-.logo{
-    width: 150px;
-    cursor: pointer;
-}
-.navbar{
-    width: 85%;
-    height: 15%;
-    margin: auto;
-    display:  flex;
+body
+{
+    display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    min-height: 100vh;
+    background: var(--clr);
 }
-.button1{
-    color: rgb(252, 249, 245);
-    padding: 100px 100px;
-    background: salmon;
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 20px;
-    outline: none;
-    cursor: pointer;
-    position: absolute;
-    top: 4%;
-    left: 4%;
-    font-size: 50px;
+.UnderBar
+{
+    position: fixed;
+    bottom: 2%;
 }
-.button2{
-    color: rgb(252, 249, 245);
-    padding: 10px 25px;
-    background: transparent;
-    border: 1px solid rgb(0, 0, 0);
-    border-radius: 20px;
-    outline: none;
-    cursor: pointer;
-    
-}
-.content{
-    color: rgb(252, 249, 245);
-    position: absolute;
-    top: 50%;
-    left: 8%;
-    transform: translateY(-50%);
-    z-index: 2;
-}
-h1{
-    font-size: 80px;
-    margin: 10px 0 30px;
-    line-height: 80px;
-}
-.side-bar{
-    width: 50px;
-    height: 100vh;
-    background: linear-gradient(rgb(151, 68, 119), rgb(223, 201, 156));
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.menu{
-    display: block;
-    width: 25px;
-    margin: 40px auto 0;
-    cursor: pointer;
-}
-.social-links img{
-    width: 30px;
-    margin: 5px auto;
-    cursor: pointer;
-}
-.social-links{
-    width: 50px;
-    text-align:  center;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.bolo{
-    width: 600px;
-    height: 600px;
-    transform: translateX(150%);
+.navigation
+{
+    width: 280px;
+    height: 70px;
+    background: #fff;
     position: relative;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    transform: translateX(5px);
+    -webkit-transform: translateX(5px);
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -o-transform: translateX(5px);
+}
+.navigation ul
+{
+    display: flex;
+    width: 350px;
+}
+.navigation ul li
+{
+    position: relative;
+    list-style: none;
+    width: 70px;
+    height: 70px;
+}
+.navigation ul li a
+{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    font-weight: 500;
+}
+.navigation ul li a .icon
+{
+    z-index: 1;
+    position: relative;
+    display: block;
+    line-height: 75px;
+    font-size: 1.5em;
+    text-align: center;
+    transition: 0.5s;
+    color: var(--clr);
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.navigation ul li.active a .icon
+{
+    transform: translateY(-30px);
+    -webkit-transform: translateY(-30px);
+    -moz-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -o-transform: translateY(-30px);
+}
+.navigation ul li a .text
+{
+    position: absolute;
+    color: var(--clr);
+    font-weight: 400;
+    font-size: 0.75em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+    opacity: 0;
+    transform: translateY(20px);
+    -webkit-transform: translateY(20px);
+    -moz-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    -o-transform: translateY(20px);
+}
+.navigation ul li.Active a .text
+{
+    opacity: 1;
+    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
+    -moz-transform: translateY(30px);
+    -ms-transform: translateY(30px);
+    -o-transform: translateY(30px);
+}
+.indicator
+{
+    position: absolute;
+    z-index: 0;
+    top: -70%;
+    width: 70px;
+    height: 70px;
+    background: #fff;
+    border-radius: 50%;
+    border: 6px solid var(--clr);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+.indicator::before
+{
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-right-radius: 20px;
+    box-shadow: 0px -10px 0 0 var(--clr);
+}
+.indicator::after
+{
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -22px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border-top-left-radius: 20px;
+    box-shadow: 0px -10px 0 0 var(--clr);
+}
+.pages
+{
+    text-align: center;
+    color: #fff;
+}
+@keyframes transitionIn
+{
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+        -moz-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -o-transform: translateY(-10px);
+}
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+}
+}
+@keyframes PageTransition
+{
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+.navigation ul li:nth-child(1).active ~ .indicator
+{
+    transform: translateX(calc(70px * 0));
+    -webkit-transform: translateX(calc(70px * 0));
+    -moz-transform: translateX(calc(70px * 0));
+    -ms-transform: translateX(calc(70px * 0));
+    -o-transform: translateX(calc(70px * 0));
+}
+.navigation ul li:nth-child(2).active ~ .indicator
+{
+    transform: translateX(calc(70px * 1));
+    -webkit-transform: translateX(calc(70px * 1));
+    -moz-transform: translateX(calc(70px * 1));
+    -ms-transform: translateX(calc(70px * 1));
+    -o-transform: translateX(calc(70px * 1));
+}
+.navigation ul li:nth-child(3).active ~ .indicator
+{
+    transform: translateX(calc(70px * 2));
+    -webkit-transform: translateX(calc(70px * 2));
+    -moz-transform: translateX(calc(70px * 2));
+    -ms-transform: translateX(calc(70px * 2));
+    -o-transform: translateX(calc(70px * 2));
+}
+.navigation ul li:nth-child(4).active ~ .indicator
+{
+    transform: translateX(calc(70px * 3));
+    -webkit-transform: translateX(calc(70px * 3));
+    -moz-transform: translateX(calc(70px * 3));
+    -ms-transform: translateX(calc(70px * 3));
+    -o-transform: translateX(calc(70px * 3));
+}
+.contain
+{
+    animation: transitionIn 0.5s;
+    -webkit-animation: transitionIn 0.5s;
+}
+.p404
+{
+    text-align: center;
+    color: #fff;
+}
+.imagen1
+{
+    position: fixed;
+    width: 250px;
+    height: 250px;
+    transform: translateX(500px);
+    -webkit-transform: translateX(500px);
+    -moz-transform: translateX(500px);
+    -ms-transform: translateX(500px);
+    -o-transform: translateX(500px);
+    border: #222327;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    outline: #fff;
+    outline-width: 20px;
+    outline-style: double;
+}
+.imagen2
+{
+    position: fixed;
+    width: 250px;
+    height: 250px;
+    transform: translateX(-700px);
+    -webkit-transform: translateX(-700px);
+    -moz-transform: translateX(-700px);
+    -ms-transform: translateX(-700px);
+    -o-transform: translateX(-700px);
+    border: #222327;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    outline: #fff;
+    outline-width: 20px;
+    outline-style: double;
+}
+.imagensdeperfil
+{
+    color: #fff;
+}
+.icons
+{
+    color: #fff;
+}
+.TitleNameSpan
+{
+    color:#fff ;
+}
+.icongrande
+{
+    width: 200px;
+    height: 200px;
+    border: #222327;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    outline: #fff;
+    outline-width: 45px;
+    outline-style: double;
+    transform: translateY(150px);
+    -webkit-transform: translateY(150px);
+    -moz-transform: translateY(150px);
+    -ms-transform: translateY(150px);
+    -o-transform: translateY(150px);
+}
+.iconmedio
+{
+    width: 50px;
+    height: 50px;
+    border: #222327;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    outline: #fff;
+    outline-width: 10px;
+    outline-style: double;
+    transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
 }
 .cupcakes img{
     width: 100px;
@@ -139,15 +375,23 @@ h1{
     0%{
         transform: translateY(0);
         opacity: 0;
-    }
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
+}
     50%{
-        opacity: 0.75;
+        opacity: 0.5;
     }
     70%{
-        opacity: 0.5;
+        opacity: 0.25;
     }
     100%{
         transform: translateY(-80vh);
         opacity: 0;
-    }
+        -webkit-transform: translateY(-80vh);
+        -moz-transform: translateY(-80vh);
+        -ms-transform: translateY(-80vh);
+        -o-transform: translateY(-80vh);
+}
 }
