--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ body
     -moz-transform: translateY(150px);
     -ms-transform: translateY(150px);
     -o-transform: translateY(150px);
+    z-index: -1;
 }
 .iconmedio
 {
@@ -327,6 +328,7 @@ body
     -moz-transform: translateY(10px);
     -ms-transform: translateY(10px);
     -o-transform: translateY(10px);
+    z-index: -1;
 }
 .cupcakes img{
     width: 100px;
